# jfasch-home

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Rules  STACKS.rst  TODO.rst  conf.py  config.yaml  index.rst  requirements.txt  trainings-table.include
courses/records/2020-01-10/Code/mq/: 010-mq-create.cc  020-mq-produce.cc  030-mq-consume.cc  meson.build  msg.h
courses/records/2020-01-10/Code/shm/: 010-mmap.cc  020-shm-create.cc  030-shm-produce.cc  040-shm-consume.cc  100-sem-create.cc  110-sem-wait.cc  meson.build
courses/records/2020-01-10/Code/signals/: 030-signal-termination-alarm.cc  meson.build
foreign/cmake-code-generators/: CMakeLists.txt  project-config.h.in
foreign/cmake-code-generators/cmake/: mosquitto.cmake
foreign/cmake-code-generators/firmware/: CMakeLists.txt
foreign/cmake-code-generators/toolcase/data-logger/src/: data-logger.cpp  sensor-config.cpp  sink-composite.cpp
foreign/cmake-external-dependency-sqlite3/toolcase/data-logger/: CMakeLists.txt
foreign/cmake-function-add-library/toolcase/data-logger/: CMakeLists.txt
foreign/cmake-subdirs-structure-dependencies/toolcase/base/: CMakeLists.txt  sysfs-switch.cpp
trainings/log/detail/2020-03-30/code/: CMakeLists.txt
trainings/material/soup/c++-inheritance-virtual-code/: CMakeLists.txt  index.rst  spi.cc  thermometer.h
trainings/material/soup/c++-templates-vs-interfaces-code/: CMakeLists.txt  histogram.h  index.rst  thermometer.h
trainings/material/soup/cmake/06-shared-libraries-preview/: CMakeLists.txt
trainings/material/soup/cmake/07-install-basic/: CMakeLists.txt
trainings/material/soup/cmake/10-configure-file/: CMakeLists.txt
trainings/material/soup/cmake/11-conditional-code-approach-1/: CMakeLists.txt  DemoConfig.h.in
trainings/material/soup/cmake/code/: CMakeLists.txt  DemoConfig.h.in
trainings/material/soup/cxx/: CMakeLists.txt  cxx.rst  group.rst  index.rst
trainings/material/soup/cxx-code/: CMakeLists.txt  index.rst
trainings/material/soup/cxx-code/design-patterns-command/: CMakeLists.txt
trainings/material/soup/cxx-code/design-patterns-observer/: CMakeLists.txt
trainings/material/soup/cxx-code/fixtures/: CMakeLists.txt  fixture-tmpdir.h
trainings/material/soup/cxx-code/hal/: CMakeLists.txt
trainings/material/soup/cxx-code/heating-screenplay/: heating-demo-v3.cpp  sensor-reader-suite.cpp
trainings/material/soup/cxx-code/oo-display-core/: CMakeLists.txt
trainings/material/soup/cxx-code/oo-shapes/: CMakeLists.txt
trainings/material/soup/cxx-code/sensors-duck/: CMakeLists.txt
trainings/material/soup/cxx-code/switches-sysfs/: CMakeLists.txt
trainings/material/soup/cxx-exercises/: CMakeLists.txt  group.rst  index.rst  oo-switches.rst  project-setup.rst
trainings/material/soup/cxx-exercises/design-patterns/: abstract-factory.rst  adapter.rst  command.rst  composite.rst  decorator.rst  group.rst  interpreter-and-adapter.rst  interpreter-basic.rst  observer.rst  proxy-remote.rst  proxy-round.rst  singleton-flexible-strict.rst  singleton-flexible.rst  singleton-inflexible.rst
trainings/material/soup/cxx-exercises/design-patterns-interpreter/: CMakeLists.txt
trainings/material/soup/cxx-exercises/design-patterns-singleton/: social-insurance-oegk.cpp  social-insurance-oegk.h
trainings/material/soup/cxx-exercises/display-led-stripe-nopoly/: display-led-stripe-nopoly.rst
trainings/material/soup/cxx-exercises/fh-oo-lab-exam/: oo.rst  shapes.rst
trainings/material/soup/cxx-exercises/fh-sensor-oo-first-try/: exercise-FH-sensor-oo-loop-function.rst  exercise-FH-sensor-oo-no-polymorphism.rst  exercise-FH-sensor-oo-random-sensor.rst  exercise-FH-sensor-oo.rst  group.rst
trainings/material/soup/cxx-exercises/heating-screenplay/: CMakeLists.txt  valuestore-dbus.h
trainings/material/soup/cxx-exercises/hysteresis-nopoly/: hysteresis-nopoly.rst
trainings/material/soup/cxx-exercises/nopoly-display-led-stripe/: display-led-stripe-nopoly.rst
trainings/material/soup/cxx-exercises/nopoly-hysteresis/: hysteresis-nopoly.rst
trainings/material/soup/cxx-exercises/nopoly-sensor-avg/: sensor-avg-nopoly.rst
trainings/material/soup/cxx-exercises/nopoly-sensors-core/: sensor-const-nopoly.rst  sensor-mock-nopoly.rst  sensor-random-nopoly.rst
trainings/material/soup/cxx-exercises/nopoly-switch-mock/: switch-mock-nopoly.rst
trainings/material/soup/cxx-exercises/oo/: group.rst  sensor-interface.rst  sensor-w1-factory.rst  sensor-w1.rst  w1-sensor-suite.cpp
trainings/material/soup/cxx-exercises/oo-sensors/: CMakeLists.txt  group.rst  hysteresis-nopoly.rst  random-demo.cpp  sensor-avg-nopoly.rst  sensor-const-nopoly.rst  sensor-interface.rst  sensor-mock-const.rst  sensor-mock-nopoly.rst  sensor-mock-random.rst  sensor-random-nopoly.rst  sensor-w1-factory.rst  sensor-w1.rst
trainings/material/soup/cxx-exercises/oo-shapes/: shapes.rst
trainings/material/soup/cxx-exercises/oo-switches/: group.rst  switch-mock.rst
trainings/material/soup/cxx-exercises/sensor-avg-nopoly/: sensor-avg-nopoly.rst
trainings/material/soup/cxx-exercises/sensor-interface/: sensor-interface.rst
trainings/material/soup/cxx-exercises/sensor-w1/: sensor-w1.rst
trainings/material/soup/cxx-exercises/sensor-w1-factory/: sensor-w1-factory.rst
trainings/material/soup/cxx-exercises/sensors-core-i2c/: CMakeLists.txt
trainings/material/soup/cxx-exercises/sensors-core-nopoly/: sensor-const-nopoly.rst  sensor-mock-nopoly.rst  sensor-random-nopoly.rst
trainings/material/soup/cxx-exercises/stl/: algo.rst  filter-generic.rst  filter-greater-10.rst  filter-odd.rst  group.rst  map.rst  uniq.rst  vector.rst
trainings/material/soup/cxx-exercises/switch-mock-nopoly/: switch-mock-nopoly.rst
trainings/material/soup/cxx03/: CMakeLists.txt  group.rst  index.rst
trainings/material/soup/cxx11/: CMakeLists.txt  group.rst  index.rst
trainings/material/soup/sysprog-signals-code/: 040-mt-pipe.cc  CMakeLists.txt  index.rst
trainings/records/2020-03-30/gtest/: CMakeLists.txt  assert-expect.cc  assert.cc  basics.rst  cmake-screenplay.rst  expect.cc  self-contained.cc
(+5648 files in other folders)
