ADD_SUBDIRECTORY(fixtures)

ADD_SUBDIRECTORY(utilities)

ADD_SUBDIRECTORY(socialdb)

ADD_SUBDIRECTORY(sensors-core-nopoly)
ADD_SUBDIRECTORY(sensors-core)

#ADD_SUBDIRECTORY(switches-core-nopoly)
ADD_SUBDIRECTORY(switches-core)

#ADD_SUBDIRECTORY(hysteresis-nopoly)

ADD_SUBDIRECTORY(sensors-core-i2c)

ADD_SUBDIRECTORY(oo-sensor-w1)
ADD_SUBDIRECTORY(oo-sensor-w1-factory)

ADD_SUBDIRECTORY(switches-sysfs)

ADD_SUBDIRECTORY(design-patterns-singleton)
ADD_SUBDIRECTORY(design-patterns-adapter)
ADD_SUBDIRECTORY(design-patterns-composite)
ADD_SUBDIRECTORY(design-patterns-proxy)
ADD_SUBDIRECTORY(design-patterns-decorator)
ADD_SUBDIRECTORY(design-patterns-abstract-factory)
ADD_SUBDIRECTORY(design-patterns-interpreter)

ADD_SUBDIRECTORY(design-patterns-command)
ADD_SUBDIRECTORY(design-patterns-observer)

ADD_SUBDIRECTORY(heating-screenplay)

ADD_SUBDIRECTORY(hal)

ADD_SUBDIRECTORY(oo-display-core)

ADD_SUBDIRECTORY(oo-shapes)

ADD_SUBDIRECTORY(stl-exercises)
