ADD_SUBDIRECTORY(fh-sensor-oo-first-try)

ADD_SUBDIRECTORY(sensor-w1/code)
ADD_SUBDIRECTORY(sensor-w1-factory/code)
ADD_SUBDIRECTORY(sensors-core-nopoly/code)
ADD_SUBDIRECTORY(switch-mock-nopoly/code)
ADD_SUBDIRECTORY(hysteresis-nopoly/code)
ADD_SUBDIRECTORY(sensor-avg-nopoly/code)
ADD_SUBDIRECTORY(display-led-stripe-nopoly/code)
