ADD_SUBDIRECTORY(cxx_dynamic_memory/code)
ADD_SUBDIRECTORY(cxx_ownership_raii/code)
ADD_SUBDIRECTORY(cxx_global_initialization/code)
ADD_SUBDIRECTORY(cxx_class_templates/code)
ADD_SUBDIRECTORY(cxx_inheritance_virtual/code)
ADD_SUBDIRECTORY(cxx_templates_vs_interfaces/code)
ADD_SUBDIRECTORY(cxx_stl_container_intro/code)
