ADD_SUBDIRECTORY(020-data-encapsulation)
ADD_SUBDIRECTORY(030-functions-and-methods)
ADD_SUBDIRECTORY(900-standard-library-miscellanea)
ADD_SUBDIRECTORY(060-stl/020-algorithm/code)
ADD_SUBDIRECTORY(060-stl/040-sequential-containers/code)
ADD_SUBDIRECTORY(060-stl/050-associative-containers/code)
ADD_SUBDIRECTORY(060-stl/exercises/reverse-string)

ADD_SUBDIRECTORY(100-inheritance-oo-design)
