set(CMAKE_CXX_STANDARD 20)

ADD_SUBDIRECTORY(010-introduction)
ADD_SUBDIRECTORY(020-new-language-features)
ADD_SUBDIRECTORY(030-smart-pointers)
ADD_SUBDIRECTORY(035-perfect-forwarding)
ADD_SUBDIRECTORY(050-multithreading)
ADD_SUBDIRECTORY(040-bind-function)
ADD_SUBDIRECTORY(100-miscellaneous)

ADD_SUBDIRECTORY(filesystem)
ADD_SUBDIRECTORY(drafts)

ADD_SUBDIRECTORY(exercises)
