set(CMAKE_CXX_STANDARD 20)

add_subdirectory(introduction)
add_subdirectory(new-language-features)
add_subdirectory(smart-pointers)
add_subdirectory(perfect-forwarding)
add_subdirectory(multithreading)
add_subdirectory(bind-function)
add_subdirectory(miscellaneous)

add_subdirectory(filesystem)
add_subdirectory(drafts)

add_subdirectory(exercises)

add_subdirectory(code)
add_subdirectory(brace-initialization)
add_subdirectory(constexpr-constinit-consteval)
add_subdirectory(move)
add_subdirectory(coroutines)
add_subdirectory(ranges)
add_subdirectory(concepts)
add_subdirectory(lambda)
add_subdirectory(attributes)
add_subdirectory(spaceship)
add_subdirectory(range-for)
add_subdirectory(oo)
add_subdirectory(auto)
add_subdirectory(control-flow-locals)
add_subdirectory(structured-binding)

