executable('010-mq-create', ['010-mq-create.cc', 'msg.h'], dependencies: [librt])
executable('020-mq-produce', ['020-mq-produce.cc', 'msg.h'], dependencies: [librt])
executable('030-mq-consume', ['030-mq-consume.cc', 'msg.h'], dependencies: [librt])
executable('099-mq-unlink', ['099-mq-unlink.cc', 'msg.h'], dependencies: [librt])
