executable('010-signal-basics', ['010-signal-basics.cc'])
executable('020-signal-handler', ['020-signal-handler.cc'])
executable('030-signal-termination-alarm', ['030-signal-termination-alarm.cc'])
executable('040-mt-pipe', ['040-mt-pipe.cc'], dependencies: [thread_dep])
executable('050-mt-pipe-alarm', ['050-mt-pipe-alarm.cc'], dependencies: [thread_dep])
executable('051-st-pipe-alarm', ['051-st-pipe-alarm.cc'])

