ADD_SUBDIRECTORY(gtest-basics)
ADD_SUBDIRECTORY(class-basics)
ADD_SUBDIRECTORY(dynmem-ownership)
ADD_SUBDIRECTORY(exercise-string)
ADD_SUBDIRECTORY(static-vs-inline)
ADD_SUBDIRECTORY(smart-pointers)
ADD_SUBDIRECTORY(stl-container)
ADD_SUBDIRECTORY(class-template)
ADD_SUBDIRECTORY(inheritance-interfaces-virtual)
ADD_SUBDIRECTORY(inheritance-morph-to-templates)
