CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(Demo VERSION 42.666)
SET(CMAKE_CXX_STANDARD 23)

MESSAGE(DEBUG "Major: ${Demo_VERSION_MAJOR}")
MESSAGE(DEBUG "Major: ${Demo_VERSION_MINOR}")
CONFIGURE_FILE(DemoConfig.h.in DemoConfig.h)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(libhello)
ADD_SUBDIRECTORY(bin)
