CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(Demo VERSION 42.666)
SET(CMAKE_CXX_STANDARD 23)

OPTION(USE_BLACKLIST "Refuse to greet blacklisted names" ON)

# normalize option strings into numbers (for better macros usage)
IF (${USE_BLACKLIST} STREQUAL ON)
  SET(USE_BLACKLIST 1)
ELSEIF (${USE_BLACKLIST} STREQUAL OFF)
  SET(USE_BLACKLIST 0)
ELSE()
  MESSAGE(DEBUG "USE_BLACKLIST must be ON or OFF (not ${USE_BLACKLIST}); assuming OFF")
  SET(USE_BLACKLIST 0)
ENDIF()

CONFIGURE_FILE(DemoConfig.h.in DemoConfig.h)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(libhello)
ADD_SUBDIRECTORY(bin)
