ADD_SUBDIRECTORY(fh-sensor-oo-first-try)

ADD_SUBDIRECTORY(sensor-w1/code)
ADD_SUBDIRECTORY(sensor-w1-factory/code)
ADD_SUBDIRECTORY(nopoly-sensors-core/code)
ADD_SUBDIRECTORY(nopoly-switch-mock/code)
ADD_SUBDIRECTORY(nopoly-hysteresis/code)
ADD_SUBDIRECTORY(nopoly-sensor-avg/code)
ADD_SUBDIRECTORY(nopoly-display-led-stripe/code)
