add_subdirectory(syscalls)
add_subdirectory(file-io)
add_subdirectory(process)
add_subdirectory(signals)
add_subdirectory(timers)
add_subdirectory(eventloop)

add_subdirectory(blocking-io)

add_subdirectory(scheduling/code)

add_subdirectory(sysprog_ipc/code)

add_subdirectory(file-locking)

add_subdirectory(mmap)
add_subdirectory(ipc-mqueue)
