ADD_EXECUTABLE(
  base-derived-wo-virtual

  base-derived-wo-virtual-main.cpp
  base-derived-wo-virtual.h
)

ADD_EXECUTABLE(
  base-derived-w-virtual

  base-derived-w-virtual-main.cpp
  base-derived-w-virtual.h
)

ADD_EXECUTABLE(
  memleak-pointer-in-vector

  memleak-pointer-in-vector.cpp
)

ADD_EXECUTABLE(
  vector-out-of-range

  vector-out-of-range.cpp
)
